Fix the css to visible the Copyright 2020

--- a/css/theme-lava.css
+++ b/css/theme-lava.css
@@ -765,7 +765,7 @@ nav .container {
 }
 .copy-text-bottom {
   left: 24px;
-  bottom:5px;
+  bottom:15px;
   position: absolute;
 }
 .text-panel {
